src/containers/chat/index.css
.add-button {
	height: 54px;
	width: 54px;
	background-color: #D8D8D8;
	border: none;
	border-radius: 100px;
}
.chat-container{
	height: 80%;
	padding: 20px;
	padding-top: 0px;
	position: absolute;
	bottom: 0;
	left: 0;
	margin-bottom: 12%;
	width: 100%;

}
.input-container{
	padding: 10px;
}
.input-space {
	margin-left: -5px;
	margin-top: 5px;
}
.line {
	box-sizing: border-box;
	height: 2.28px;
	width: 18px;
	border: 3px solid #979797;
}
.line-copy {
	box-sizing: border-box;
	height: 2.28px;
	width: 18px;
	border: 3px solid #979797;
	transform: rotate(90deg);
}
.message-container1 {
	padding: 10px;
	padding-top: 0px;
	background-color: white;
	height: 100%;
	overflow: auto;
	display: flex;
	flex-direction: column-reverse;
}
.message-input {
    height: 43px;
    width: 96%;
	border-radius: 24px;
	background-color: #EFF2F3;
	margin-left: -5px;
	margin-top: 15px;
	border: none;
	padding-left: 20px;
	font-size: 17px;
	color: #706F6F;
}
.plus_sign {
	font-size: 50px;
	font-weight: 100;
	margin: auto;
	color: #979797;
	height: 10px;
	cursor: pointer;
}
#alignMiddleImg{
    width: 56px;
    height: 54px;
}

label.plusImg {
    display: inline-block;
    font-size: 50px; 
    font-weight: 100;
    
    position: absolute;
    margin-top: 98px;
    margin-left: 6.5%;
    text-align: center;
    width: 54px;
    height: 54px;   
    background-color: #D8D8D8; 
    color: #979797;
    cursor: pointer;
    border-radius: 100%;
    margin: auto;
}

.ThePlusSignImg{
    color: #979797;
    font-size: 50px; 
    font-weight: 100;
	margin-top: 0px;
	margin-bottom: 0px;
    text-align: center;
}

.btnImageSend{
	height: 72px;
    width: 72px;
    border-radius: 200px;
    border-width: 0px;
    background-color: #D8D8D8;
    font-size: 56px;
    color: #979797;
    text-align: center;
    cursor: pointer;
}

[type=file].btnImageSend{
    position: absolute;
    filter: alpha(opacity=0);
    opacity: 0;
}

